examples/erroneous/semantic_erroneous/overloadedvarname.grc
fun main() : nothing
  var a,a,c : int;

{
  writeInteger(a+b+c);
  writeChar('\n');
}
